--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,3 +22,6 @@ unbind '"'
 unbind %
 bind | split-window -h
 bind - split-window -v
+
+# start new panes in same working directory instead of ~
+bind c new-window -c "#{pane_current_path}"
