--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,9 +8,42 @@
 # $ tmux source-file ~/.tmux.conf
 # ```
 
+# check settings with:
+# ```console
+# $ tmux show-options [-g]
+# ```
+#
+# or inside tmux:
+# ```
+# <prefix> :
+# show-options [-g]
+# ```
+
+# Some interesting other tmux confs:
+# http://www.deanbodenham.com/learn/tmux-conf-file.html
+
+#===============================
+# Misc
+#===============================
+
+# allow mouse
+#set -g mouse on
+
+# allow 256 colours (this might be enabled by default: pretty motd
+# picture looks the same in and out of tmux without setting this value)
+#set -g default-terminal "screen-256color"
+
+# allow utf8 in tmux UI
+#setw -g utf8 on
+
 #===============================
 # Key bindings
 #===============================
+# Remember: `<prefix> ?` shows all keybindings
+#
+# `-r` indicates key may repeat
+# `-T <key-table>` specify the key-table (default: bind to the `prefix`
+#   table)
 # replace default C-b with C-a
 set -g prefix C-a
 
@@ -18,10 +51,26 @@ set -g prefix C-a
 # tmux config has some odd quoting/escaping rules
 # here we escape double-quote by enclosing in single
 # quotes
+#
+# also, start split panes in the same working directory instead of ~
 unbind '"'
 unbind %
-bind | split-window -h
-bind - split-window -v
+bind | split-window -h -c "#{pane_current_path}"
+bind \ split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
 
 # start new panes in same working directory instead of ~
 bind c new-window -c "#{pane_current_path}"
+
+# use alt-arrow keys (without prefix) to switch panes
+# (might conflict with macos builtins or iTerm2. TBD)
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+
+# same but using Vim navigation keys
+#bind -n M-h select-pane -L
+#bind -n M-l select-pane -R
+#bind -n M-k select-pane -U
+#bind -n M-j select-pane -D
